.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gljestdid__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_gljestdid</customHelpPage>
    <description>gljestdid__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gljestdid_glcmp__r.rstkf__externalid__c  &amp; &apos;_&apos;  &amp; UPPER(rstkf__gljestdid_stdid__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gljestdid_glcmp__r.Name &amp;&apos;-&apos;&amp; UPPER(rstkf__gljestdid_stdid__c)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdid_deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>gljestdid_deactivated__c</description>
        <label>Standard ID is Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdid_desc__c</fullName>
        <inlineHelpText>User-defined description, up to 50 characters in length</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdid_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company that this Standard ID is associated</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>gljestdids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdid_stdid__c</fullName>
        <inlineHelpText>User-defined ID, up to 10 characters in length, that identifies the purpose of certain journal entries. Although not required by Rootstock Financials, these may be optionally used when building JE templates.</inlineHelpText>
        <label>Standard ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Journal Entry Standard ID</label>
    <listViews>
        <fullName>rstkf__RS_General_Journal_Entry_Standard_IDs</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljestdid_glcmp__c</columns>
        <columns>rstkf__gljestdid_stdid__c</columns>
        <columns>rstkf__gljestdid_desc__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Journal Entry Standard IDs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entry Standard IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__companyisreqandnotbemodifiable</fullName>
        <active>true</active>
        <description>Company is required and cannot be modified</description>
        <errorConditionFormula>ISBLANK(rstkf__gljestdid_glcmp__c) 
||(!ISNEW() &amp;&amp; ISCHANGED(rstkf__gljestdid_glcmp__c))</errorConditionFormula>
        <errorMessage>Company is required and cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__descriptionisrequired</fullName>
        <active>true</active>
        <description>Description is required</description>
        <errorConditionFormula>ISBLANK(rstkf__gljestdid_desc__c)</errorConditionFormula>
        <errorMessage>Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__stdIdIsreqandnotmodified</fullName>
        <active>true</active>
        <description>Std ID is required and cannot be modified</description>
        <errorConditionFormula>ISBLANK(rstkf__gljestdid_stdid__c) 
||(!ISNEW() &amp;&amp; ISCHANGED( rstkf__gljestdid_stdid__c))</errorConditionFormula>
        <errorMessage>Std ID is required and cannot be modified</errorMessage>
    </validationRules>
</CustomObject>